--- a/app/src/main/res/layout/layout_item_cam_msg_text.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_text.xml
@@ -5,107 +5,115 @@
     android:layout_height="wrap_content"
     android:background="@color/color_white"
     android:clickable="true"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/x10"
-    android:paddingRight="@dimen/x10">
+    android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-
-        <com.cylan.jiafeigou.widget.FateLineView
-            android:id="@+id/fl_item_time_line"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:paddingLeft="@dimen/x2"
-            android:paddingRight="@dimen/x2"
-            hunt:dashLineColor="@color/color_e8e8e8"
-            hunt:dashLineWidth="@dimen/x2"
-            hunt:innerCircleColor="@color/color_white"
-            hunt:innerCircleRadius="@dimen/x3"
-            hunt:outerCircleColor="@color/color_e8e8e8"
-            hunt:outerCircleRadius="@dimen/x5"
-            hunt:outerCircleStrokeWidth="@dimen/x4"
-            hunt:outerCircleY="@dimen/y22" />
-
-        <RadioButton
-            android:id="@+id/rbtn_item_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/custom_rtbn_style1"
-            android:button="@null"
-            android:clickable="false" />
-    </FrameLayout>
+    <include layout="@layout/layout_message_time_divider" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/x10"
+        android:paddingRight="@dimen/x10">
 
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <com.cylan.jiafeigou.widget.FateLineView
+                android:id="@+id/fl_item_time_line"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:paddingLeft="@dimen/x2"
+                android:paddingRight="@dimen/x2"
+                hunt:dashLineColor="@color/color_e8e8e8"
+                hunt:dashLineWidth="@dimen/x2"
+                hunt:innerCircleColor="@color/color_white"
+                hunt:innerCircleRadius="@dimen/x3"
+                hunt:outerCircleColor="@color/color_e8e8e8"
+                hunt:outerCircleRadius="@dimen/x5"
+                hunt:outerCircleStrokeWidth="@dimen/x4"
+                hunt:outerCircleY="@dimen/y22" />
+
+            <RadioButton
+                android:id="@+id/rbtn_item_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/custom_rtbn_style1"
+                android:button="@null"
+                android:clickable="false" />
+        </FrameLayout>
 
         <LinearLayout
-            android:id="@+id/rLayout_cam_message"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/x4"
-            android:layout_marginStart="@dimen/x4"
-            android:layout_marginTop="@dimen/y14"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_cam_message_item_date"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y26"
-                android:gravity="center"
-                android:textColor="@color/color_666666"
-                android:textSize="@dimen/sp13" />
 
-            <TextView
-                android:id="@+id/tv_cam_message_list_content"
+            <LinearLayout
+                android:id="@+id/rLayout_cam_message"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/color_666666"
-                android:textSize="@dimen/sp14" />
-
-            <FrameLayout
-                android:id="@+id/fLayout_cam_message_item_bottom"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y48"
-                android:layout_gravity="bottom"
-                android:gravity="center_vertical">
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/x4"
+                android:layout_marginStart="@dimen/x4"
+                android:layout_marginTop="@dimen/y14"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_cam_message_item_delete"
+                    android:id="@+id/tv_cam_message_item_date"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="@dimen/y26"
                     android:gravity="center"
-                    android:padding="@dimen/x10"
-                    android:text="@string/DELETE"
-                    android:textColor="@color/color_4b9fd5"
-                    android:textSize="@dimen/sp11" />
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp13" />
 
                 <TextView
-                    android:id="@+id/tv_jump_next"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end|center_vertical"
-                    android:drawablePadding="@dimen/x10"
-                    android:drawableStart="@drawable/btn_to_live_selector"
-                    android:gravity="center"
-                    android:text="@string/MSG_DETAILS"
-                    android:textColor="@color/color_909090"
-                    android:textSize="@dimen/sp11" />
-            </FrameLayout>
+                    android:id="@+id/tv_cam_message_list_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp14" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y1"
-                android:layout_gravity="bottom"
-                android:background="@color/color_e8e8e8" />
+                <FrameLayout
+                    android:id="@+id/fLayout_cam_message_item_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/y48"
+                    android:layout_gravity="bottom"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/tv_cam_message_item_delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:padding="@dimen/x10"
+                        android:text="@string/DELETE"
+                        android:textColor="@color/color_4b9fd5"
+                        android:textSize="@dimen/sp11" />
+
+                    <TextView
+                        android:id="@+id/tv_jump_next"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end|center_vertical"
+                        android:drawablePadding="@dimen/x10"
+                        android:drawableStart="@drawable/btn_to_live_selector"
+                        android:gravity="center"
+                        android:text="@string/MSG_DETAILS"
+                        android:textColor="@color/color_909090"
+                        android:textSize="@dimen/sp11" />
+                </FrameLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/y1"
+                    android:layout_gravity="bottom"
+                    android:background="@color/color_e8e8e8" />
+            </LinearLayout>
+
         </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
