--- a/app/src/main/res/layout/layout_face_page_pop_menu.xml
+++ b/app/src/main/res/layout/layout_face_page_pop_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/y150"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/y150"
         android:layout_height="match_parent"
         android:background="@color/color_white"
         android:orientation="vertical"
@@ -38,8 +38,7 @@
             android:layout_marginTop="@dimen/y24"
             android:text="@string/DOOR_BELL_LOOK"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp16"
-            />
+            android:textSize="@dimen/sp16" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
